Improve Admin Category Management Controller
Cập nhật AdminCategoryServlet để hoàn thiện xử lý quản lý danh mục.

- Bổ sung xử lý thêm, sửa, xóa danh mục rõ ràng hơn.
- Giữ route /admin/categories và tương thích với JSP hiện tại.
- Bổ sung flash message khi thêm, sửa, xóa danh mục thành công hoặc thất bại.
- Bổ sung validate tên danh mục, slug và danh mục cha.
- Tự động tạo slug từ tên danh mục nếu admin bỏ trống slug.
- Chuẩn hóa slug về chữ thường, không dấu, chỉ gồm chữ, số và dấu gạch ngang.
- Không cho chọn chính danh mục hiện tại làm danh mục cha.
- Lọc danh sách danh mục cha trong form sửa để tránh chọn chính nó.
- Hiển thị lại dữ liệu form khi thêm hoặc sửa bị lỗi.
- Xử lý lỗi xóa danh mục riêng để hiển thị thông báo rõ ràng ở trang danh sách.
- Chuẩn hóa xử lý UTF-8 cho request và response.

Files changed:
- AdminCategoryServlet.java: Cập nhật controller quản lý danh mục cha/con, validate dữ liệu, flash message và xử lý lỗi.