@@ -1,5 +1,8 @@
 package com.webshop.app.controller.AdminController;
 
+import com.webshop.app.dao.CategoryDAO;
+import com.webshop.app.model.Category;
+
 import java.io.IOException;
 import java.text.Normalizer;
 import java.util.ArrayList;
@@ -8,78 +11,61 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
-import com.webshop.app.dao.CategoryDAO;
-import com.webshop.app.model.Category;
-
 import jakarta.servlet.ServletException;
 import jakarta.servlet.annotation.WebServlet;
 import jakarta.servlet.http.HttpServlet;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+import jakarta.servlet.http.HttpSession;
 
 @WebServlet("/admin/categories")
 public class AdminCategoryServlet extends HttpServlet {
 
     private final CategoryDAO categoryDAO = new CategoryDAO();
 
-    // ===== CONSTANTS =====
+    // ===== JSP PATH =====
     private static final String JSP_LIST = "/jsp/admin/category/category_list.jsp";
     private static final String JSP_FORM = "/jsp/admin/category/category_form.jsp";
 
+    // ===== GET ACTION =====
     private static final String ACT_LIST = "list";
     private static final String ACT_NEW = "new";
     private static final String ACT_EDIT = "edit";
 
+    // ===== POST ACTION =====
     private static final String ACT_CREATE = "create";
     private static final String ACT_UPDATE = "update";
     private static final String ACT_DELETE = "delete";
+
+    // ===== FLASH KEY =====
+    private static final String FLASH_SUCCESS = "categorySuccess";
+    private static final String FLASH_ERROR = "categoryError";
 
     @Override
     protected void doGet(HttpServletRequest req, HttpServletResponse resp)
             throws ServletException, IOException {
 
-        req.setCharacterEncoding("UTF-8");
-        resp.setCharacterEncoding("UTF-8");
+        setupEncoding(req, resp);
 
-        String action = req.getParameter("action");
-        if (action == null) action = ACT_LIST;
+        String action = safe(req.getParameter("action"));
+        if (action.isBlank()) {
+            action = ACT_LIST;
+        }
 
         switch (action) {
 
-            case ACT_NEW: {
-                req.setAttribute("mode", "create");
-                // dropdown danh mục cha
-                req.setAttribute("parentCategories", categoryDAO.findAllParents());
-                req.getRequestDispatcher(JSP_FORM).forward(req, resp);
-                return;
-            }
+            case ACT_NEW:
+                showCreateForm(req, resp);
+                break;
 
-            case ACT_EDIT: {
-                int id = safeInt(req.getParameter("id"), -1);
-                if (id <= 0) {
-                    resp.sendRedirect(req.getContextPath() + "/admin/categories");
-                    return;
-                }
-
-                Category category = categoryDAO.findById(id);
-                if (category == null) {
-                    resp.sendRedirect(req.getContextPath() + "/admin/categories");
-                    return;
-                }
-
-                req.setAttribute("mode", "edit");
-                req.setAttribute("category", category);
-                req.setAttribute("parentCategories", categoryDAO.findAllParents());
-
-                req.getRequestDispatcher(JSP_FORM).forward(req, resp);
-                return;
-            }
+            case ACT_EDIT:
+                showEditForm(req, resp);
+                break;
 
             case ACT_LIST:
-            default: {
+            default:
                 renderList(req, resp);
-                return;
-            }
+                break;
         }
     }
 
@@ -87,181 +73,429 @@ public class AdminCategoryServlet extends HttpServlet {
     protected void doPost(HttpServletRequest req, HttpServletResponse resp)
             throws ServletException, IOException {
 
-        req.setCharacterEncoding("UTF-8");
-        resp.setCharacterEncoding("UTF-8");
+        setupEncoding(req, resp);
 
-        String action = req.getParameter("action");
-        if (action == null) action = ACT_CREATE;
+        String action = safe(req.getParameter("action"));
+        if (action.isBlank()) {
+            action = ACT_CREATE;
+        }
 
         try {
             switch (action) {
 
-                case ACT_CREATE: {
-                    Category c = new Category();
-                    bind(req, c);
-                    validate(c);
-                    categoryDAO.create(c);
+                case ACT_CREATE:
+                    handleCreate(req);
+                    setFlash(req, FLASH_SUCCESS, "Thêm danh mục thành công.");
+                    redirectToList(req, resp);
                     break;
-                }
 
-                case ACT_UPDATE: {
-                    int id = safeInt(req.getParameter("id"), -1);
-                    if (id <= 0) break;
-
-                    Category c = new Category();
-                    c.setId(id);
-                    bind(req, c);
-                    validate(c);
-                    categoryDAO.update(c);
+                case ACT_UPDATE:
+                    handleUpdate(req);
+                    setFlash(req, FLASH_SUCCESS, "Cập nhật danh mục thành công.");
+                    redirectToList(req, resp);
                     break;
-                }
 
-                case ACT_DELETE: {
-                    int id = safeInt(req.getParameter("id"), -1);
-                    if (id > 0) categoryDAO.delete(id);
+                case ACT_DELETE:
+                    handleDelete(req);
+                    setFlash(req, FLASH_SUCCESS, "Xóa danh mục thành công.");
+                    redirectToList(req, resp);
                     break;
-                }
 
-                default: {
-                    // action lạ -> quay về list
+                default:
+                    setFlash(req, FLASH_ERROR, "Thao tác không hợp lệ.");
+                    redirectToList(req, resp);
                     break;
-                }
             }
 
-            resp.sendRedirect(req.getContextPath() + "/admin/categories");
-            return;
-
         } catch (IllegalArgumentException ex) {
-            // lỗi validate -> trả về form + giữ dữ liệu
             forwardFormWithError(req, resp, action, ex.getMessage());
-            return;
+
+        } catch (RuntimeException ex) {
+            handleRuntimeError(req, resp, action, ex);
 
         } catch (Exception ex) {
-            // lỗi bất ngờ -> in log + trả về form
             ex.printStackTrace();
             forwardFormWithError(req, resp, action, "Có lỗi xảy ra. Vui lòng thử lại.");
         }
     }
 
-    /* ===================== VIEW HELPERS ===================== */
+    /* =====================================================
+       GET VIEW
+    ===================================================== */
+
+    private void showCreateForm(HttpServletRequest req, HttpServletResponse resp)
+            throws ServletException, IOException {
+
+        req.setAttribute("mode", "create");
+        req.setAttribute("category", new Category());
+        req.setAttribute("parentCategories", categoryDAO.findAllParents());
+
+        req.getRequestDispatcher(JSP_FORM).forward(req, resp);
+    }
+
+    private void showEditForm(HttpServletRequest req, HttpServletResponse resp)
+            throws ServletException, IOException {
+
+        int id = safeInt(req.getParameter("id"), -1);
+
+        if (id <= 0) {
+            setFlash(req, FLASH_ERROR, "ID danh mục không hợp lệ.");
+            redirectToList(req, resp);
+            return;
+        }
+
+        Category category = categoryDAO.findById(id);
+
+        if (category == null) {
+            setFlash(req, FLASH_ERROR, "Danh mục không tồn tại hoặc đã bị xóa.");
+            redirectToList(req, resp);
+            return;
+        }
+
+        req.setAttribute("mode", "edit");
+        req.setAttribute("category", category);
+        req.setAttribute("parentCategories", getAvailableParentCategories(id));
+
+        req.getRequestDispatcher(JSP_FORM).forward(req, resp);
+    }
 
     private void renderList(HttpServletRequest req, HttpServletResponse resp)
             throws ServletException, IOException {
 
-        List<Category> all = categoryDAO.findAll();
+        pullFlash(req);
+
+        List<Category> allCategories = categoryDAO.findAll();
 
         Map<Integer, List<Category>> childrenMap = new LinkedHashMap<>();
         List<Category> parents = new ArrayList<>();
 
-        for (Category cat : all) {
-            if (cat.getParentId() == null) {
-                parents.add(cat);
+        for (Category category : allCategories) {
+
+            if (category.getParentId() == null) {
+                parents.add(category);
             } else {
-                childrenMap.computeIfAbsent(cat.getParentId(), k -> new ArrayList<>()).add(cat);
+                childrenMap
+                        .computeIfAbsent(category.getParentId(), key -> new ArrayList<>())
+                        .add(category);
             }
         }
 
-        // sort cho đẹp (tuỳ chọn)
-        parents.sort(Comparator.comparing(c -> safe(c.getName()), String.CASE_INSENSITIVE_ORDER));
-        for (List<Category> chs : childrenMap.values()) {
-            chs.sort(Comparator.comparing(c -> safe(c.getName()), String.CASE_INSENSITIVE_ORDER));
+        Comparator<Category> byName = Comparator.comparing(
+                category -> safe(category.getName()),
+                String.CASE_INSENSITIVE_ORDER
+        );
+
+        parents.sort(byName);
+
+        for (List<Category> children : childrenMap.values()) {
+            children.sort(byName);
         }
 
+        req.setAttribute("categories", allCategories);
         req.setAttribute("parents", parents);
         req.setAttribute("childrenMap", childrenMap);
 
         req.getRequestDispatcher(JSP_LIST).forward(req, resp);
     }
 
-    private void forwardFormWithError(HttpServletRequest req, HttpServletResponse resp,
-                                      String action, String message)
-            throws ServletException, IOException {
+    /* =====================================================
+       POST HANDLER
+    ===================================================== */
+
+    private void handleCreate(HttpServletRequest req) {
+
+        Category category = new Category();
+
+        bind(req, category);
+        validate(category, false);
+
+        categoryDAO.create(category);
+    }
+
+    private void handleUpdate(HttpServletRequest req) {
+
+        int id = safeInt(req.getParameter("id"), -1);
+
+        if (id <= 0) {
+            throw new IllegalArgumentException("ID danh mục không hợp lệ.");
+        }
+
+        Category category = new Category();
+
+        category.setId(id);
+        bind(req, category);
+        validate(category, true);
+
+        categoryDAO.update(category);
+    }
+
+    private void handleDelete(HttpServletRequest req) {
+
+        int id = safeInt(req.getParameter("id"), -1);
+
+        if (id <= 0) {
+            throw new IllegalArgumentException("ID danh mục không hợp lệ.");
+        }
+
+        categoryDAO.delete(id);
+    }
+
+    /* =====================================================
+       FORM ERROR
+    ===================================================== */
+
+    private void forwardFormWithError(
+            HttpServletRequest req,
+            HttpServletResponse resp,
+            String action,
+            String message
+    ) throws ServletException, IOException {
 
         req.setAttribute("error", message);
 
-        // reload dropdown parent cho admin
-        req.setAttribute("parentCategories", categoryDAO.findAllParents());
-
-        Category c = new Category();
+        Category category = new Category();
 
         if (ACT_UPDATE.equals(action)) {
+            category.setId(safeInt(req.getParameter("id"), 0));
             req.setAttribute("mode", "edit");
-            c.setId(safeInt(req.getParameter("id"), 0));
+            req.setAttribute("parentCategories", getAvailableParentCategories(category.getId()));
         } else {
             req.setAttribute("mode", "create");
+            req.setAttribute("parentCategories", categoryDAO.findAllParents());
         }
 
-        try { bind(req, c); } catch (Exception ignore) {}
-        req.setAttribute("category", c);
+        try {
+            bind(req, category);
+        } catch (Exception ignored) {
+            // Nếu dữ liệu form lỗi nặng thì vẫn forward form với message phía trên.
+        }
+
+        req.setAttribute("category", category);
 
         req.getRequestDispatcher(JSP_FORM).forward(req, resp);
     }
 
-    /* ===================== BIND / VALIDATE ===================== */
+    private void handleRuntimeError(
+            HttpServletRequest req,
+            HttpServletResponse resp,
+            String action,
+            RuntimeException ex
+    ) throws ServletException, IOException {
 
-    private void bind(HttpServletRequest req, Category c) {
+        ex.printStackTrace();
+
+        String message = safe(ex.getMessage());
+        if (message.isBlank()) {
+            message = "Có lỗi xảy ra. Vui lòng thử lại.";
+        }
+
+        if (ACT_DELETE.equals(action)) {
+            setFlash(req, FLASH_ERROR, message);
+            redirectToList(req, resp);
+            return;
+        }
+
+        forwardFormWithError(req, resp, action, message);
+    }
+
+    /* =====================================================
+       BIND / VALIDATE
+    ===================================================== */
+
+    private void bind(HttpServletRequest req, Category category) {
 
         String name = safe(req.getParameter("name"));
-        c.setName(name);
-
-        // slug: nếu form bỏ trống -> tự tạo
         String slug = safe(req.getParameter("slug"));
-        if (slug.isBlank()) slug = toSlug(name);
-        c.setSlug(slug);
 
-        // parentId: nếu không chọn -> null (danh mục cha)
-        String parentStr = req.getParameter("parentId");
-        if (parentStr == null || parentStr.trim().isEmpty()) {
-            c.setParentId(null);
+        if (slug.isBlank()) {
+            slug = toSlug(name);
         } else {
-            int pid = safeInt(parentStr, 0);
-            c.setParentId(pid > 0 ? pid : null);
+            slug = toSlug(slug);
         }
 
-        // active: form có thể gửi "1" hoặc "true"
-        boolean active = "1".equals(req.getParameter("active"))
-                || "true".equalsIgnoreCase(req.getParameter("active"));
-        c.setActive(active);
+        Integer parentId = parseParentId(req.getParameter("parentId"));
+
+        boolean active = isChecked(req.getParameter("active"));
+
+        category.setName(name);
+        category.setSlug(slug);
+        category.setParentId(parentId);
+        category.setActive(active);
     }
 
-    private void validate(Category c) {
-        if (c.getName() == null || c.getName().isBlank())
+    private void validate(Category category, boolean updating) {
+
+        if (category == null) {
+            throw new IllegalArgumentException("Dữ liệu danh mục không hợp lệ.");
+        }
+
+        if (updating && category.getId() <= 0) {
+            throw new IllegalArgumentException("ID danh mục không hợp lệ.");
+        }
+
+        if (isBlank(category.getName())) {
             throw new IllegalArgumentException("Tên danh mục không được để trống.");
+        }
 
-        if (c.getSlug() == null || c.getSlug().isBlank())
+        if (category.getName().length() > 100) {
+            throw new IllegalArgumentException("Tên danh mục không được vượt quá 100 ký tự.");
+        }
+
+        if (isBlank(category.getSlug())) {
             throw new IllegalArgumentException("Slug không hợp lệ. Vui lòng nhập tên danh mục khác.");
+        }
 
-        // chỉ check khi update (id > 0), và so sánh Integer đúng cách
-        if (c.getId() > 0 && c.getParentId() != null && c.getParentId().intValue() == c.getId())
-            throw new IllegalArgumentException("Danh mục cha không hợp lệ.");
-    }
+        if (category.getSlug().length() > 150) {
+            throw new IllegalArgumentException("Slug không được vượt quá 150 ký tự.");
+        }
 
-    /* ===================== HELPERS ===================== */
+        if (!category.getSlug().matches("^[a-z0-9]+(?:-[a-z0-9]+)*$")) {
+            throw new IllegalArgumentException("Slug chỉ được chứa chữ thường, số và dấu gạch ngang.");
+        }
 
-    private int safeInt(String s, int def) {
-        try {
-            if (s == null) return def;
-            return Integer.parseInt(s.trim());
-        } catch (Exception e) {
-            return def;
+        if (updating
+                && category.getParentId() != null
+                && category.getParentId().intValue() == category.getId()) {
+
+            throw new IllegalArgumentException("Không thể chọn chính danh mục này làm danh mục cha.");
         }
     }
 
-    private String safe(String s) {
-        return s == null ? "" : s.trim();
+    /* =====================================================
+       CATEGORY HELPER
+    ===================================================== */
+
+    private List<Category> getAvailableParentCategories(int currentCategoryId) {
+
+        List<Category> parentCategories = categoryDAO.findAllParents();
+        List<Category> availableParents = new ArrayList<>();
+
+        for (Category parent : parentCategories) {
+
+            if (parent.getId() != currentCategoryId) {
+                availableParents.add(parent);
+            }
+        }
+
+        return availableParents;
+    }
+
+    private Integer parseParentId(String value) {
+
+        if (isBlank(value)) {
+            return null;
+        }
+
+        int parentId = safeInt(value, 0);
+
+        return parentId > 0 ? parentId : null;
+    }
+
+    /* =====================================================
+       FLASH / REDIRECT
+    ===================================================== */
+
+    private void setFlash(HttpServletRequest req, String key, String message) {
+
+        HttpSession session = req.getSession();
+
+        session.setAttribute(key, message);
+    }
+
+    private void pullFlash(HttpServletRequest req) {
+
+        HttpSession session = req.getSession(false);
+
+        if (session == null) {
+            return;
+        }
+
+        Object success = session.getAttribute(FLASH_SUCCESS);
+        Object error = session.getAttribute(FLASH_ERROR);
+
+        if (success != null) {
+            req.setAttribute("success", success.toString());
+            session.removeAttribute(FLASH_SUCCESS);
+        }
+
+        if (error != null) {
+            req.setAttribute("error", error.toString());
+            session.removeAttribute(FLASH_ERROR);
+        }
+    }
+
+    private void redirectToList(HttpServletRequest req, HttpServletResponse resp)
+            throws IOException {
+
+        resp.sendRedirect(req.getContextPath() + "/admin/categories");
+    }
+
+    /* =====================================================
+       COMMON HELPER
+    ===================================================== */
+
+    private void setupEncoding(HttpServletRequest req, HttpServletResponse resp)
+            throws IOException {
+
+        req.setCharacterEncoding("UTF-8");
+        resp.setCharacterEncoding("UTF-8");
+        resp.setContentType("text/html; charset=UTF-8");
+    }
+
+    private int safeInt(String value, int defaultValue) {
+
+        try {
+            if (value == null) {
+                return defaultValue;
+            }
+
+            return Integer.parseInt(value.trim());
+
+        } catch (Exception e) {
+            return defaultValue;
+        }
+    }
+
+    private String safe(String value) {
+        return value == null ? "" : value.trim();
+    }
+
+    private boolean isBlank(String value) {
+        return value == null || value.trim().isEmpty();
+    }
+
+    private boolean isChecked(String value) {
+
+        if (value == null) {
+            return false;
+        }
+
+        String normalized = value.trim();
+
+        return "1".equals(normalized)
+                || "true".equalsIgnoreCase(normalized)
+                || "on".equalsIgnoreCase(normalized)
+                || "yes".equalsIgnoreCase(normalized);
     }
 
     private String toSlug(String input) {
-        if (input == null) return "";
-        String s = input.trim().toLowerCase();
 
-        s = Normalizer.normalize(s, Normalizer.Form.NFD)
+        if (input == null) {
+            return "";
+        }
+
+        String slug = input.trim().toLowerCase();
+
+        slug = Normalizer.normalize(slug, Normalizer.Form.NFD)
                 .replaceAll("\\p{InCombiningDiacriticalMarks}+", "");
 
-        s = s.replace("đ", "d");
-        s = s.replaceAll("[^a-z0-9\\s-]", "");
-        s = s.replaceAll("\\s+", "-").replaceAll("-{2,}", "-");
+        slug = slug.replace("đ", "d");
+        slug = slug.replaceAll("[^a-z0-9\\s-]", "");
+        slug = slug.replaceAll("\\s+", "-");
+        slug = slug.replaceAll("-{2,}", "-");
+        slug = slug.replaceAll("^-+", "");
+        slug = slug.replaceAll("-+$", "");
 
-        return s;
+        return slug;
     }
 }
